<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">

        <!-- Title -->
        <ImageView
            android:id="@+id/title_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/title_image_desc"
            android:src="@drawable/welcome" />

        <!-- Logo -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

        <!-- Subtext -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/please_sign_up_to_create_account"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- Username -->
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/edittext_rounded"
            android:hint="@string/hint1"
            android:paddingHorizontal="16dp" />

        <!-- Password -->
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/edittext_rounded"
            android:hint="@string/hint2"
            android:inputType="textPassword"
            android:paddingHorizontal="16dp" />

        <!-- Password -->

        <!-- Sign In Button -->
        <EditText
            android:id="@+id/re_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/edittext_rounded"
            android:hint="@string/hint3"
            android:inputType="textPassword"
            android:paddingHorizontal="16dp" />

        <LinearLayout
            android:id="@+id/sign_up"
            android:layout_width="265dp"
            android:layout_height="45dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/button_black_rounded"
            android:gravity="center"

            >

            <TextView
                android:id="@+id/sign_up_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign Up"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"

                />
        </LinearLayout>

        <!-- Sign Up Link -->
        <TextView
            android:id="@+id/signin_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/already_have_account"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="italic" />

    </LinearLayout>
</RelativeLayout>
