<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

<!-- Title -->
    <ImageView
        android:id="@+id/title_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/Welcome"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/title_image_desc"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"/>


<!-- Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/Logo"
        android:contentDescription="@string/logo"/>

<!-- Subtext -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_sign_in_to_proceed"
        android:textColor="#000000"
        android:textSize="16sp"
        android:layout_marginTop="32dp"/>

<!-- Username -->
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hint1"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_rounded"
        android:paddingHorizontal="16dp"/>

<!-- Password -->
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hint2"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_rounded"
        android:paddingHorizontal="16dp"/>

<!-- Sign In Button -->
        <Button
            android:id="@+id/btn_signin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_black_rounded"
            android:text="Sign in"
            android:textColor="@android:color/white"
            android:textColorLink="#000000" />

<!-- Sign Up Link -->
        <TextView
            android:id="@+id/signup_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Don't have account yet?"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="italic" />

</LinearLayout>
    </ScrollView>
